--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "1.0.0",
   "description": "A collection of web components",
   "main": "index.js",
-  "scripts": {
-    "start": "babel src --out-file ./dist/web-components.js"
-  },
+  "scripts": {},
   "keywords": [
     "web",
     "components",
@@ -14,14 +12,6 @@
   ],
   "author": "Dotun Ogunsakin",
   "license": "ISC",
-  "devDependencies": {
-    "@babel/cli": "^7.5.0",
-    "@babel/core": "^7.5.4",
-    "@babel/preset-env": "^7.5.4",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3"
-  },
-  "dependencies": {
-    "@babel/polyfill": "^7.4.4"
-  }
+  "devDependencies": {},
+  "dependencies": {}
 }
